src/test/deca/context/invalid/ble_boolean_ble_boolean.deca
// Description :
// 
//      Test syntaxiquement correct de true<=true
// 
// Résultats : 
// 
//      N/A
// 
// Historique : 
// 
//      Créé le 09/06/2023 par gl03

{
    boolean y = true<=true;
}

